--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <li>En présence d’un complément d’objet, on emploie souvent le gérondif pour éviter l’enchaînement d’un génitif après un génitif (ce qui alourdirait la construction).</li>
     </ul>
   </div>
-
+<div class="tenor-gif-embed" data-postid="11042033" data-share-method="host" data-aspect-ratio="1.80451" data-width="50%"><a href="https://tenor.com/view/chill-this-is-fine-world-burn-gif-11042033">Chill This Is Fine GIF</a>from <a href="https://tenor.com/search/chill-gifs">Chill GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <div class="section">
     <h2>4. Exemples tirés des textes</h2>
     <ul>
