--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
       <span class="latin">ad caritatem fovendam</span> — pour favoriser la charité
       <br>Le gérondif <i>fovendam</i> est accordé avec <i>caritatem</i> (COD de fovere).
     </div>
-    
     <div class="example">
       <span class="latin">modus administrationis et erogationis bonorum</span> — la manière d’administrer et de distribuer les biens
       <br>Administrationis et erogationis sont des gérondifs employés comme compléments en génitif.
@@ -69,13 +68,13 @@
     → il a jugé qu’il fallait révoquer<br>
     <em>revocandum</em> : gérondif neutre singulier, exprimant ici une action à faire (forme périphrastique passive).
   </div>
-
   <div class="example">
     diligenter <strong>implenda</strong> sunt<br>
     → elles doivent être accomplies avec soin<br>
     <em>implenda</em> : gérondif au nominatif pluriel neutre, en périphrase passive.
   </div>
-  
+      </div>
+<div class="tenor-gif-embed" data-postid="11042033" data-share-method="host" data-aspect-ratio="1.80451" data-width="50%"><a href="https://tenor.com/view/chill-this-is-fine-world-burn-gif-11042033">Chill This Is Fine GIF</a>from <a href="https://tenor.com/search/chill-gifs">Chill GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <div class="section">
     <h2>3. Astuce de distinction</h2>
     <ul>
@@ -84,13 +83,6 @@
       <li>En présence d’un complément d’objet, on emploie souvent le gérondif pour éviter l’enchaînement d’un génitif après un génitif (ce qui alourdirait la construction).</li>
     </ul>
   </div>
-<div class="tenor-gif-embed" data-postid="11042033" data-share-method="host" data-aspect-ratio="1.80451" data-width="50%"><a href="https://tenor.com/view/chill-this-is-fine-world-burn-gif-11042033">Chill This Is Fine GIF</a>from <a href="https://tenor.com/search/chill-gifs">Chill GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-  <div class="section">
-    <h2>4. Exemples tirés des textes</h2>
-    <ul>
-      <li><span class="latin">ad caritatem fovendam</span> — pour favoriser la charité (gérondif avec accord sur <i>caritatem</i>)</li>
-      <li><span class="latin">modum administrationis et erogationis bonorum</span> — la manière d’administrer et de distribuer les biens (gérondif en génitif)</li>
-
       
     </ul>
   </div>
