--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
       <li>En présence d’un complément d’objet, on emploie souvent le gérondif pour éviter l’enchaînement d’un génitif après un génitif (ce qui alourdirait la construction).</li>
     </ul>
   </div>
-      
+        <h3>Autres fiches mémo de grammaire</h3>
+    <ul>
+<li><a href="https://elibruyere.github.io/Clause-ut/">Clauses en UT</a></li> 
+  <li><a href="https://elibruyere.github.io/Proposition-infinitive/">Propositions infinitives</a></li> 
+  <li><a href="https://elibruyere.github.io/cas-prepositions/">Prépositions et leur cas</a></li> 
+  <li><a href="https://elibruyere.github.io/pronoms-relatifs/">Pronoms relatifs</a></li> 
+    </ul>
+          
     </ul>
   </div>
 </body>
