--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
   <li><a href="https://elibruyere.github.io/cas-prepositions/">Prépositions et leur cas</a></li> 
   <li><a href="https://elibruyere.github.io/pronoms-relatifs/">Pronoms relatifs</a></li> 
     </ul>
-          
+    <ul>
+      <li><a href="https://elibruyere.github.io/analyses-canoniques/">Retour à la page d'accueil</a></li>           
     </ul>
   </div>
 </body>
