--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
     → elles doivent être accomplies avec soin<br>
     <em>implenda</em> : gérondif au nominatif pluriel neutre, en périphrase passive.
   </div>
-      </div>
+    <div class="example">
+      <span class="latin">quare alterum de poena infligenda, ... solvendum fuisset</span> — → « c’est pourquoi l’autre [point], concernant la peine à infliger, aurait dû être résolu... »pour favoriser la charité
+      <br>Le gérondif <i>Solvendum</i> est à l'accusatif singulier neutre parce qu’il s’accorde avec <i>alterum</i>, un neutre accusatif singulier qui sert ici de sujet apparent du verbe déponent oritur dans cette tournure impersonnelle.
+    </div>
+         
+
 <div class="tenor-gif-embed" data-postid="11042033" data-share-method="host" data-aspect-ratio="1.80451" data-width="50%"><a href="https://tenor.com/view/chill-this-is-fine-world-burn-gif-11042033">Chill This Is Fine GIF</a>from <a href="https://tenor.com/search/chill-gifs">Chill GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <div class="section">
     <h2>3. Astuce de distinction</h2>
@@ -82,6 +87,7 @@
       <li>Le <strong>gérondif</strong> est un adjectif verbal et s’accorde avec un nom.</li>
       <li>En présence d’un complément d’objet, on emploie souvent le gérondif pour éviter l’enchaînement d’un génitif après un génitif (ce qui alourdirait la construction).</li>
     </ul>
+      
   </div>
         <h3>Autres fiches mémo de grammaire</h3>
     <ul>
