--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h3>Autres fiches mémo de grammaire</h3>
     <ul>
 <li><a href="https://elibruyere.github.io/Clause-ut/">Clauses en UT</a></li> 
-  <li><a href="https://elibruyere.github.io/Proposition-infinitive/">Propositions infinitives</a></li> 
+  <li><a href="https://elibruyere.github.io/Tournures-periphrastiques/">Tournures périphrastiques</a></li> 
   <li><a href="https://elibruyere.github.io/cas-prepositions/">Prépositions et leur cas</a></li> 
   <li><a href="https://elibruyere.github.io/pronoms-relatifs/">Pronoms relatifs</a></li> 
     </ul>
