--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    <div class="example">
       <span class="latin">hoc munus debere exsequi <strong>agendo</strong> et <strong>loquendo</strong> sed non minus <strong>patiendo</strong> et <strong>orando</strong> </span> — ce ministère doit être accompli non seulement en agissant et en parlant, mais aussi — et tout autant — en souffrant et en priant</p>
     </div>
-    
+        </div>
   <div class="section">
     <h2>2. Le Gérondif</h2>
     
