--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
     <p>Le gérondif est un adjectif verbal. Il s’accorde avec un nom et exprime une action que ce nom doit subir ou faire. Il a donc un sens passif (sauf pour les verbes déponents).</p>
     <p>Souvent, le gérondif est employé à la place du gérond lorsque le verbe est transitif et a un complément d’objet direct.</p>
     <div class="example">
-      <span class="latin">ad caritatem fovendam</span> — pour favoriser la charité
+      <span class="latin">ad caritatem <strong>fovendam</strong></span> — pour favoriser la charité
       <br>Le gérondif <i>fovendam</i> est accordé avec <i>caritatem</i> (COD de fovere).
     </div>
     <div class="example">
-      <span class="latin">modus administrationis et erogationis bonorum</span> — la manière d’administrer et de distribuer les biens
+      <span class="latin">modus <strong>administrationis</strong> et <strong>erogationis</strong> bonorum</span> — la manière d’administrer et de distribuer les biens
       <br>Administrationis et erogationis sont des gérondifs employés comme compléments en génitif.
     </div>
-  </div>
   <div class="example">
-    revocandum esse censuit<br>
+    <strong>revocandum</strong> esse censuit<br>
     → il a jugé qu’il fallait révoquer<br>
     <em>revocandum</em> : gérondif neutre singulier, exprimant ici une action à faire (forme périphrastique passive).
   </div>
   <div class="example">
     diligenter <strong>implenda</strong> sunt<br>
     → elles doivent être accomplies avec soin<br>
-    <em>implenda</em> : gérondif au nominatif pluriel neutre, en périphrase passive.
+    <em>implenda</em> : gérondif au nominatif pluriel neutre, en périphrase passive, avec idée d'obligation.
   </div>
     <div class="example">
-      <span class="latin">quare alterum de poena infligenda, ... solvendum fuisset</span> — → « c’est pourquoi l’autre [point], concernant la peine à infliger, aurait dû être résolu... »pour favoriser la charité
+      <span class="latin">quare alterum de poena <strong>infligenda</strong>, ... solvendum fuisset</span> — → « c’est pourquoi l’autre [point], concernant la peine à infliger, aurait dû être résolu... »pour favoriser la charité
       <br>Le gérondif <i>Solvendum</i> est à l'accusatif singulier neutre parce qu’il s’accorde avec <i>alterum</i>, un neutre accusatif singulier qui sert ici de sujet apparent du verbe déponent oritur dans cette tournure impersonnelle.
     </div>
-         
+    </div>
+       
 
 <div class="tenor-gif-embed" data-postid="11042033" data-share-method="host" data-aspect-ratio="1.80451" data-width="50%"><a href="https://tenor.com/view/chill-this-is-fine-world-burn-gif-11042033">Chill This Is Fine GIF</a>from <a href="https://tenor.com/search/chill-gifs">Chill GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <div class="section">
